# goit-pythonweb-hw-08

./: .env.example  Dockerfile  alembic.ini  docker-compose.yml  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 48804e8af612_create_users_table.py  4aaef33dc774_create_contacts_table.py
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  cloudinary_service.py  contacts.py  email.py  rate_limiter.py
